KAS-4488 add plausble, block confirm when uploading

--- a/app/components/cases/subcases/document-upload-panel.hbs
+++ b/app/components/cases/subcases/document-upload-panel.hbs
@@ -7,6 +7,7 @@
       @multiple={{true}}
       @reusable={{true}}
       @onUpload={{this.uploadPiece}}
+      @onQueueUpdate={{@onFileQueueUpdate}}
     />
     <div class="upload-container">
       {{#each @pieces as |piece|}}
