--- a/app/components/web-components/rdfa-editor.hbs
+++ b/app/components/web-components/rdfa-editor.hbs
@@ -1,4 +1,4 @@
-<div class={{this.sizeClass}} ...attributes>
+<div class="wc-rdfa-editor {{this.sizeClass}}" ...attributes>
   {{#if this.browserIsSupported}}
     <EditorContainer>
       <:top>
