--- a/app/templates/agenda/minutes.hbs
+++ b/app/templates/agenda/minutes.hbs
@@ -36,7 +36,7 @@
           <Auk::Panel::Body
             class="au-o-flow {{if this.isEditing 'au-u-background-gray-100'}}"
           >
-            <SayEditor
+            <Auk::Editor
               @allowFullscreen={{true}}
               @showSave={{true}}
               @handleRdfaEditorInit={{this.handleRdfaEditorInit}}
@@ -75,7 +75,7 @@
                   @onVersionClicked={{this.revertToVersion}}
                 />
               </:header>
-            </SayEditor>
+            </Auk::Editor>
           </Auk::Panel::Body>
           <Auk::Panel::Footer class="au-u-background-gray-100">
             <Auk::Toolbar>
