--- a/app/templates/agenda/agendaitems/agendaitem/documents.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/documents.hbs
@@ -36,6 +36,24 @@
 </Auk::Toolbar>
 {{#unless this.loadData.isRunning}}
   {{#if this.documentsAreVisible}}
+    {{log "got here"}}
+    {{#if (and (user-may "view-documents-postponed-and-retracted") this.decisionActivity.isPostponed)}}
+        <AuAlert
+          @skin="warning"
+          @icon="alert-triangle"
+          @title={{t "postponed-item"}}
+        >
+          {{t "agendaitem-document-postponed-or-retracted--message" status=(lowercase (t "postponed"))}}
+        </AuAlert>
+    {{else if (and (user-may "view-documents-postponed-and-retracted") this.decisionActivity.isRetracted)}}
+        <AuAlert
+          @skin="warning"
+          @icon="alert-triangle"
+          @title={{t "retracted-item"}}
+        >
+          {{t "agendaitem-document-postponed-or-retracted--message" status=(lowercase (t "retracted"))}}
+        </AuAlert>
+    {{/if}}
     <Documents::DocumentCardList
       @pieces={{this.model.pieces}}
       @highlightedPieces={{this.newAgendaitemPieces}}
@@ -53,7 +71,13 @@
         @skin="info"
         @icon="info-circle"
       >
-        {{t "no-documents-yet"}}
+        {{#if (and (not (user-may "view-documents-postponed-and-retracted")) this.decisionActivity.isPostponed)}}
+          {{t "agendaitem-is-status-no-documents-available" status=(lowercase (t "postponed"))}}
+        {{else if (and (not (user-may "view-documents-postponed-and-retracted")) this.decisionActivity.isRetracted)}}
+          {{t "agendaitem-is-status-no-documents-available" status=(lowercase (t "retracted"))}}
+        {{else}}
+          {{t "no-documents-yet"}}
+        {{/if}}
       </AuAlert>
     </div>
   {{/if}}
