--- a/app/components/agenda/agenda-overview/agenda-overview-item.hbs
+++ b/app/components/agenda/agenda-overview/agenda-overview-item.hbs
@@ -137,6 +137,23 @@
       </div>
       {{#if this.documentsAreVisible}}
         <div class="auk-u-mt-4">
+          {{#if (and (user-may "view-documents-postponed-and-retracted") this.decisionActivity.isPostponed)}}
+              <AuAlert
+                @skin="warning"
+                @icon="alert-triangle"
+                @title={{t "postponed-item"}}
+              >
+                {{t "agendaitem-document-postponed-or-retracted--message" status=(lowercase (t "postponed"))}}
+              </AuAlert>
+          {{else if (and (user-may "view-documents-postponed-and-retracted") this.decisionActivity.isRetracted)}}
+              <AuAlert
+                @skin="warning"
+                @icon="alert-triangle"
+                @title={{t "retracted-item"}}
+              >
+                {{t "agendaitem-document-postponed-or-retracted--message" status=(lowercase (t "retracted"))}}
+              </AuAlert>
+          {{/if}}
           <Documents::DocumentBadgeList
             @pieces={{this.limitedAgendaitemDocuments}}
             @highlightedPieces={{this.newAgendaitemDocuments}}
@@ -157,6 +174,10 @@
             {{/if}}
           </AuButton>
         {{/if}}
+      {{else if (and (not (user-may "view-documents-postponed-and-retracted")) this.decisionActivity.isPostponed)}}
+        {{t "agendaitem-is-status-no-documents-available" status=(lowercase (t "postponed"))}}
+      {{else if (and (not (user-may "view-documents-postponed-and-retracted")) this.decisionActivity.isRetracted)}}
+        {{t "agendaitem-is-status-no-documents-available" status=(lowercase (t "retracted"))}}
       {{/if}}
       {{#unless @isEditingFormallyOkStatus}}
         {{#if @agendaitem.comment}}
