remove currentSessin isAdmin in favor of permissions

--- a/app/components/agenda/agendaitem/agendaitem-controls.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-controls.hbs
@@ -54,7 +54,7 @@
       {{/if}}
       {{#if
         (and
-          (or this.currentSession.isAdmin (await this.isDeletable))
+          (or (user-may "remove-approved-agendaitems") (await this.isDeletable))
           this.isDesignAgenda
           (user-may "manage-agendaitems")
         )
