--- a/app/components/agenda/agenda-overview/agenda-overview-item.hbs
+++ b/app/components/agenda/agenda-overview/agenda-overview-item.hbs
@@ -41,8 +41,11 @@
         </div> 
       {{/if}}
       <span data-test-agenda-overview-item-numbering class="vlc-agenda-items-sub-item__numbering">
-        {{! For legacy data agenda-item number can be unexistent }}
-        {{#if @agendaitem.number}}
+        {{! For legacy data agenda-item number can be unexistent }} 
+
+        {{#if @agendaitemIndex}}
+          {{@agendaitemIndex}}.
+        {{else if @agendaitem.number}}
           {{@agendaitem.number}}.
         {{/if}}
       </span>
@@ -98,44 +101,45 @@
             {{/if}}
           {{/if}}
         </div>
-      </div>
-
-      {{#if @agendaitem.shortTitle}}
-        {{! Avoid rendering the same thing twice if no "shortTitle" exists }}
-        <pre
-          data-test-agenda-overview-item-title
-          class="vlc-agenda-items__body-padding auk-u-text-pre-line"
-        >
-          {{@agendaitem.title}}
-        </pre>
-      {{/if}}
-
-      <div class="auk-o-flex auk-o-flex--justify-between">
-        {{#if this.subcase.subcaseName}}
-          <AuPill @size="small" class="vlc-agenda-meta__times-passed" data-test-agenda-overview-item-subcase-name>
-            {{!capitalization using helper instead of css class:
-                  because of `display: inline-flex` property of Auk::Pill
-                  it is not affected by the `::first-letter` selector
-                  used in the auk-u-text-capitalize class }}
-            {{capitalize this.subcase.subcaseName}}
-          </AuPill>
-        {{else}}
-          {{!  TODO: Only here because required for alignment of flex items }}
-          <span class="vlc-agenda-meta__times-passed"></span>
-        {{/if}}
-        {{#if (and (user-may "manage-agendaitems") @showFormallyOkStatus)}}
-          {{#if @isEditingFormallyOkStatus}}
-            <div class="vlc-agenda-meta__status-holder">
-              <Utils::FormallyOkSelector
-                data-test-agenda-overview-item-formally-ok={{true}}
-                @formallyOkStatusUri={{@agendaitem.formallyOk}}
-                @onChange={{this.setAndSaveFormallyOkStatus}}
-              />
-            </div>
+        </div>
+        {{#unless @allowReorderItems}}
+          {{#if @agendaitem.shortTitle}}
+            {{! Avoid rendering the same thing twice if no "shortTitle" exists }}
+            <pre
+              data-test-agenda-overview-item-title
+              class="vlc-agenda-items__body-padding auk-u-text-pre-line"
+            >
+              {{@agendaitem.title}}
+            </pre>
           {{/if}}
-        {{/if}}
-      </div>
-      {{#if this.documentsAreVisible}}
+
+          <div class="auk-o-flex auk-o-flex--justify-between">
+            {{#if this.subcase.subcaseName}}
+              <AuPill @size="small" class="vlc-agenda-meta__times-passed" data-test-agenda-overview-item-subcase-name>
+                {{!capitalization using helper instead of css class:
+                      because of `display: inline-flex` property of Auk::Pill
+                      it is not affected by the `::first-letter` selector
+                      used in the auk-u-text-capitalize class }}
+                {{capitalize this.subcase.subcaseName}}
+              </AuPill>
+            {{else}}
+              {{!  TODO: Only here because required for alignment of flex items }}
+              <span class="vlc-agenda-meta__times-passed"></span>
+            {{/if}}
+          {{#if (and (user-may "manage-agendaitems") @showFormallyOkStatus)}}
+            {{#if @isEditingFormallyOkStatus}}
+              <div class="vlc-agenda-meta__status-holder">
+                <Utils::FormallyOkSelector
+                  data-test-agenda-overview-item-formally-ok={{true}}
+                  @formallyOkStatusUri={{@agendaitem.formallyOk}}
+                  @onChange={{this.setAndSaveFormallyOkStatus}}
+                />
+              </div>
+            {{/if}}
+          {{/if}}
+        </div>
+      {{/unless}}
+      {{#if (and this.documentsAreVisible (not @allowReorderItems))}}
         <div class="auk-u-mt-4">
           <Documents::DocumentBadgeList
             @pieces={{this.limitedAgendaitemDocuments}}
