--- a/app/templates/agenda/agendaitems.hbs
+++ b/app/templates/agenda/agendaitems.hbs
@@ -38,7 +38,11 @@
       <Agenda::AgendaitemSearch
         @searchText={{readonly this.filter}}
         @onSearch={{this.searchAgendaitems}}
-      />
+        @showReorderButton="true"
+        @isEditingOverview={{this.isEditingOverview}}
+        @toggleIsEditingOverview={{this.startEditingOverview}}
+        @currentAgenda={{this.agenda}}
+      />   
       <div class="auk-scroll-wrapper__body auk-scroll-wrapper__body--vertical auk-u-hidden@print">
         {{#if this.isLoading}}
           <Auk::Loader @message={{t "agenda-loading"}} />
@@ -58,6 +62,11 @@
             @toggleShowModifiedOnly={{this.toggleShowModifiedOnly}}
             @isEditingOverview={{this.isEditingOverview}}
             @toggleIsEditingOverview={{toggle "isEditingOverview" this}}
+            @notasHasChanged={{this.notasHasChanged}}
+            @toggleNotasHasChanged={{toggle "notasHasChanged" this}}
+            @announcementsHasChanged={{this.announcementsHasChanged}}
+            @toggleAnnouncementsHasChanged={{toggle "announcementsHasChanged" this}}
+            @onCancel={{set this "isEditingOverview" false}}
             class="auk-u-m-8"
           />
           {{#if this.assignNewPriorities.isRunning}}
