KAS-4154: passed this.disabled to editor on minutes to disable the save button in fullscreen

--- a/app/components/auk/editor.hbs
+++ b/app/components/auk/editor.hbs
@@ -28,6 +28,7 @@
             <AuButton
               @skin="primary"
               @loading={{@onSaveTask.isRunning}}
+              @disabled={{@fullScreenSaveDisabled}}
               {{on "click" (perform @onSaveTask)}}
             >
               {{t "save"}}
