--- a/app/templates/agenda/minutes.hbs
+++ b/app/templates/agenda/minutes.hbs
@@ -42,6 +42,7 @@
               @handleRdfaEditorInit={{this.handleRdfaEditorInit}}
               @onSaveTask={{this.saveMinutes}}
               @title={{t "minutes"}}
+              @fullScreenSaveDisabled={{this.saveDisabled}}
             >
               <:header>
                 {{#if this.editorShowContentUpdateButton}}
