KAS-4493: change newsitem.inNewsletter depending on decisionresultcode or agendaitem.confidential

--- a/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-edit.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-edit.hbs
@@ -8,7 +8,7 @@
             data-test-agendaitem-titles-edit-confidential={{true}}
             @checked={{@subcase.confidential}}
             id="subcase-confidential"
-            @onChange={{set this "confidentialChanged" true}}
+            @onChange={{this.onChangeConfidentiality}}
           />
         </AuFormRow>
       {{/if}}
