--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -85,6 +85,7 @@
               @decisionActivity={{@decisionActivity}}
               @onSave={{perform this.onDecisionEdit}}
               @onCancel={{this.toggleEditPill}}
+              @onPostponedOrRetracted={{this.onPostponedOrRetracted}}
               class="auk-u-my-2"
             />
           {{/if}}
