--- a/app/components/subcases/subcase-item.hbs
+++ b/app/components/subcases/subcase-item.hbs
@@ -64,6 +64,23 @@
             <Auk::Loader />
           </div>
         {{else}}
+          {{#if (and (user-may "view-documents-postponed-and-retracted") this.decisionActivity.isPostponed)}}
+            <AuAlert
+              @skin="warning"
+              @icon="alert-triangle"
+              @title={{t "postponed-item"}}
+            >
+              {{t "agendaitem-document-postponed-or-retracted--message" status=(lowercase (t "postponed"))}}
+            </AuAlert>
+          {{else if (and (user-may "view-documents-postponed-and-retracted") this.decisionActivity.isRetracted)}}
+            <AuAlert
+              @skin="warning"
+              @icon="alert-triangle"
+              @title={{t "retracted-item"}}
+            >
+              {{t "agendaitem-document-postponed-or-retracted--message" status=(lowercase (t "retracted"))}}
+            </AuAlert>
+          {{/if}}
           <Documents::DocumentBadgeList
             @pieces={{this.limitedSubcaseDocuments}}
           />
@@ -84,5 +101,9 @@
         {{/if}}
       </Auk::Accordion::Item>
     </Auk::Accordion>
+  {{else if (and (not (user-may "view-documents-postponed-and-retracted")) this.decisionActivity.isPostponed)}}
+    {{t "agendaitem-is-status-no-documents-available" status=(lowercase (t "postponed"))}}
+  {{else if (and (not (user-may "view-documents-postponed-and-retracted")) this.decisionActivity.isRetracted)}}
+    {{t "agendaitem-is-status-no-documents-available" status=(lowercase (t "retracted"))}}
   {{/if}}
 </div>
