--- a/app/templates/cases/case/subcases/subcase/documents.hbs
+++ b/app/templates/cases/case/subcases/subcase/documents.hbs
@@ -35,6 +35,23 @@
     </Auk::Toolbar>
 
     {{#if this.documentsAreVisible}}
+      {{#if (and (user-may "view-documents-postponed-and-retracted") this.decisionActivity.isPostponed)}}
+        <AuAlert
+          @skin="warning"
+          @icon="alert-triangle"
+          @title={{t "postponed-item"}}
+        >
+          {{t "agendaitem-document-postponed-or-retracted--message" status=(lowercase (t "postponed"))}}
+        </AuAlert>
+      {{else if (and (user-may "view-documents-postponed-and-retracted") this.decisionActivity.isRetracted)}}
+        <AuAlert
+          @skin="warning"
+          @icon="alert-triangle"
+          @title={{t "retracted-item"}}
+        >
+          {{t "agendaitem-document-postponed-or-retracted--message" status=(lowercase (t "retracted"))}}
+        </AuAlert>
+      {{/if}}
       <Documents::DocumentCardList
         @pieces={{this.model.pieces}}
         @onAddPiece={{perform this.addPiece}}
@@ -47,7 +64,13 @@
           @skin="info"
           @icon="info-circle"
         >
-          {{t "no-documents-yet"}}
+          {{#if (and (not (user-may "view-documents-postponed-and-retracted")) this.decisionActivity.isPostponed)}}
+            {{t "agendaitem-is-status-no-documents-available" status=(lowercase (t "postponed"))}}
+          {{else if (and (not (user-may "view-documents-postponed-and-retracted")) this.decisionActivity.isRetracted)}}
+            {{t "agendaitem-is-status-no-documents-available" status=(lowercase (t "retracted"))}}
+          {{else}}
+            {{t "no-documents-yet"}}
+          {{/if}}
         </AuAlert>
       </div>
     {{/if}}
