feat: replace AgendaitemDecision with refactored component

--- a/app/templates/agenda/agendaitems/agendaitem/decisions.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/decisions.hbs
@@ -1,5 +1,5 @@
 <div class="auk-u-mb-2">
-  <Agenda::Agendaitem::AgendaitemDecision
+  <Agenda::Agendaitem::Decision
     @agendaitem={{this.agendaitem}}
     @decisionActivity={{this.model}}
     @agendaContext={{hash meeting=this.meeting agenda=this.agenda agendaitem=this.agendaitem}}
