--- a/app/components/agenda/agenda-header/agenda-actions.hbs
+++ b/app/components/agenda/agenda-header/agenda-actions.hbs
@@ -32,6 +32,7 @@
       {{t "agenda-view"}}
     </AuLink>
    <AuButton
+      @skin="link"
       {{on "click" this.print}}
       role="menuitem"
     >
