--- a/app/templates/agenda/agendaitems.hbs
+++ b/app/templates/agenda/agendaitems.hbs
@@ -38,7 +38,7 @@
       <Agenda::AgendaitemSearch
         @searchText={{readonly this.filter}}
         @onSearch={{this.searchAgendaitems}}
-        @showReorderButton="true"
+        @showReorderButton={{not this.showModifiedOnly}}
         @isEditingOverview={{this.isEditingOverview}}
         @toggleIsEditingOverview={{this.startEditingOverview}}
         @currentAgenda={{this.agenda}}
