KAS-4517: fix filter on mandatees now updates list correctly

--- a/app/components/mandatees/mandatees-panel/mandatees-panel-edit.hbs
+++ b/app/components/mandatees/mandatees-panel/mandatees-panel-edit.hbs
@@ -99,5 +99,6 @@
     @referenceDate={{@referenceDate}}
     @onClose={{this.closeSelectMandatee}}
     @onAdd={{this.addMandatee}}
+    @excludeMandatees={{this.mandateesBuffer}}
   />
 {{/if}}
