chore: replacing sum helper with add from dependency
ember-math-helpers already includes a sum helper which does the same
thing as the one implemented here. It's also just an alias of the add
helper (also defined in that package) which we already use in the
codebase. Replacing it here with add for consistency.

--- a/app/components/agenda/agenda-overview.hbs
+++ b/app/components/agenda/agenda-overview.hbs
@@ -62,7 +62,7 @@
                   @onMove={{this.move}}
                   @isFirst={{eq indexItems 0}}
                   @isLast={{not (has-next agendaitem this.notas)}}
-                  @agendaitemIndex={{sum indexItems 1}}
+                  @agendaitemIndex={{add indexItems 1}}
                 />
               </li>
             {{/each}}
@@ -151,7 +151,7 @@
               @onMove={{this.move}}
               @isFirst={{eq indexItems 0}}
               @isLast={{not (has-next announcement this.announcements)}}
-              @agendaitemIndex={{sum indexItems 1}}
+              @agendaitemIndex={{add indexItems 1}}
             />
           </li>
         {{/each}}
