--- a/app/components/agenda/agendaitem-search.hbs
+++ b/app/components/agenda/agendaitem-search.hbs
@@ -17,6 +17,7 @@
       {{#if (and @showReorderButton this.canEdit)}}
         <Auk::Toolbar::Item class="auk-u-m-0">
           <AuButton
+            data-test-agenda-overview-formally-ok-edit
             @skin="secondary"
             @hideText={{@hideButtonText}}
             @loading={{this.search.isRunning}}
