--- a/app/styles/auk/_auk-additions.scss
+++ b/app/styles/auk/_auk-additions.scss
@@ -1,6 +1,10 @@
 /* Framework & external component fixes
    ========================================================================== */
 
+.auk-u-flex-grow {
+  flex-grow: 1;
+}
+
 // Modal
 
 .auk-modal-backdrop > .ember-view {
